--- a/test_blog/blogapp/static/css/blog.css
+++ b/test_blog/blogapp/static/css/blog.css
@@ -19,6 +19,14 @@ h1 a, h2 a {
     margin-left: 40px;
 }
 
+.comment {
+    margin: 20px 0px 20px 20px;
+}
+
+.footnote {
+    margin-left: 40px;
+}
+
 h1, h2, h3, h4 {
     font-family: 'Lobster', cursive;
 }
