--- a/test_blog/blogapp/templates/blog/base.html
+++ b/test_blog/blogapp/templates/blog/base.html
@@ -9,10 +9,14 @@
     </head>
     <body>
         <div class="page-header">
-            <h1><a href="/">Liam's Blog</a></h1>
             {% if user.is_authenticated %}
                 <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+                <a href="{% url 'post_drafts' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+                <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log Out</a>)</small></p>
+            {% else %}
+                <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
             {% endif %}
+            <h1><a href="/">Liam's Blog</a></h1>
         </div>
         <div class="content container">
             <div class="row">
@@ -21,6 +25,9 @@
                 {% endblock %}
                 </div>
             </div>
+            
+        </div>
+        <div class='footnote'>
             <footer>
                 <p>&copy; 2019 by RTPU</p>
             </footer>
