--- a/test_blog/blogapp/templates/blog/post_list.html
+++ b/test_blog/blogapp/templates/blog/post_list.html
@@ -5,9 +5,13 @@
         <div class="post">
             <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
             <div class="date">
-                <p>published: {{ post.published_date }}</p>
+                <p>Published: {{ post.published_date }}</p>
             </div>
+            <a href="{% url 'post_detail' pk=post.pk %}">Comments: {{ post.approved_comments.count }}</a>
             <p>{{ post.text|linebreaksbr }}</p>
+            {% if user.is_authenticated %}
+                <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+            {% endif %}    
         </div>
     {% endfor %}
 {% endblock %}
